HealthyAtHomeAPI/Deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthy-at-home-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: healthy-at-home
  template:
    metadata:
      labels:
        app: healthy-at-home
    spec:
      containers:
        - name: healthy-at-home
          image: edvinas.azurecr.io/healthy-at-home-app/healthy-at-home
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: healthy-at-home
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: healthy-at-home
